# context-keeper

./: Cargo.toml  Containerfile  LICENSE  README.md
.github/workflows/: release.yml
docs/: architecture.md  configuration-examples.md
hooks/: log-commands.sh  post-compact-reminder.sh  pre-compact-save.sh  save-todos.sh  track-files.sh
src/: config.rs  context.rs  main.rs
src/cli/: context.rs  init.rs  mod.rs
src/collectors/: adb.rs  build.rs  container.rs  git.rs  history.rs  mod.rs  traits.rs  workstate.rs
src/formatters/: full.rs  minimal.rs  mod.rs  normal.rs
src/mcp/: mod.rs  tools.rs
