[package]
name = "context-keeper"
version = "0.3.0"
edition = "2021"
description = "AI-Native Development Context Engine - Helps AI agents remember your build environment"
license = "MIT"
repository = "https://github.com/stealth-dev-lab/context-keeper"
keywords = ["ai", "mcp", "development", "context", "aosp", "ros"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# MCP SDK
rmcp = { version = "0.15", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }

# Async traits
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1"

# Config parsing
toml = "0.8"
glob = "0.3"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
